# valkey-setup

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  taskw
configs/: build.yaml
deploy/: valkey-data.volume  valkey.container
resources/: entrypoint.sh  valkey.conf
src/valkey_setup/: main.py
src/valkey_setup/containers/: __init__.py  containers.py
src/valkey_setup/containers/core/: builder.py  core.py
src/valkey_setup/containers/modules/: __init__.py  modules.py
src/valkey_setup/containers/modules/valkey_bloom/: __init__.py  builder.py  runtime.py  valkey_bloom.py
src/valkey_setup/containers/modules/valkey_json/: __init__.py  builder.py  runtime.py  valkey_json.py
src/valkey_setup/containers/modules/valkey_search/: __init__.py  builder.py  runtime.py  valkey_search.py
src/valkey_setup/containers/runtime/: __init__.py  builder.py  runtime.py
src/valkey_setup/core/: __init__.py  buildah.py  builder_base.py
src/valkey_setup/core/containers/: __init__.py  buildah.py  builder_base.py  distro_base.py
src/valkey_setup/core/containers/distro/: __init__.py  main.py  suse.py
src/valkey_setup/core/spec/: __init__.py  spec.py
